--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "migrate:dev": "prisma migrate dev",
+    "prisma:generate": "prisma generate",
     "pm2:start:prod": "pm2-runtime start ecosystem.config.cjs",
     "start:backend": "node dist/main",
     "test": "jest",
